# api/routes/seller.route.js
@@ -1,12 +1,9 @@
 import express from 'express';
-import { registerSeller, loginSeller, logoutSeller, sellerByCategory } from '../controller/seller.controller.js';
-import { isAuthenticated } from '../middleware/auth.js';
+import {  sellerByCategory } from '../controller/seller.controller.js';
+
 
 const sellerRouter = express.Router();
 
-sellerRouter.post('/register', registerSeller);
-sellerRouter.post('/login', loginSeller);
-sellerRouter.get('/logout', logoutSeller);
 sellerRouter.get('/byCategory', sellerByCategory)
 
 
